bug 407894: getTimer() on mac produces incorrect values. This patch was already applied as 264:0c90a730d951 but was lost in merge/changeset 417:a3dc9c13aa1f. I am simply reapplying the original patch to get the getTimer() to work properly on mac.